[gd_scene load_steps=9 format=3 uid="uid://x8u7tb17udya"]

[ext_resource type="Script" path="res://App/Main/main.gd" id="1_bm34x"]
[ext_resource type="Theme" uid="uid://b4mgxtwuy0160" path="res://themes/main_theme.tres" id="1_m2frl"]
[ext_resource type="StyleBox" uid="uid://pkeyw1gbp6s" path="res://themes/style_tab_selected.tres" id="3_vpjxf"]
[ext_resource type="StyleBox" uid="uid://b7ascd11wu7mk" path="res://themes/style_tabbar_background.tres" id="4_jlrel"]
[ext_resource type="StyleBox" uid="uid://bigi11vomfv16" path="res://themes/style_button.tres" id="5_7334v"]
[ext_resource type="PackedScene" uid="uid://b4da3to7mvee5" path="res://UI/popup/popup.tscn" id="5_osk20"]
[ext_resource type="PackedScene" uid="uid://dw70vonudpgfe" path="res://UI/check_box.tscn" id="6_muxi1"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_67y6w"]
color = Color(0.595154, 0.595154, 0.595154, 1)
thickness = 2

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_bm34x")

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 2
offset_left = 10.0
offset_top = 14.0
offset_right = 1910.0
offset_bottom = 1070.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40

[node name="File" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
title = "Demand"
size = Vector2i(289, 344)
theme = ExtResource("1_m2frl")
item_count = 6
item_0/text = "Open Cycle"
item_1/text = "New Cycle"
item_1/id = 1
item_2/text = "Save Cycle"
item_2/id = 2
item_3/text = "Save Cycle As..."
item_3/id = 3
item_4/text = "Load Survey"
item_4/id = 4
item_5/text = "Quit"
item_5/id = 5

[node name="Demand" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
title = "Demand"
size = Vector2i(110, 100)
theme = ExtResource("1_m2frl")
item_count = 3
item_0/text = "Overview"
item_1/text = "By Level"
item_1/id = 1
item_2/text = "By Program"
item_2/id = 2

[node name="Assign" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
title = "Assign"
theme = ExtResource("1_m2frl")
item_count = 5
item_0/text = "Teacher Preferences"
item_1/text = "Student Preferences"
item_1/id = 1
item_2/text = "Analyze Demand vs Supply"
item_2/id = 2
item_3/text = "Assign"
item_3/id = 3
item_4/text = "Reports"
item_4/id = 4

[node name="Supply" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
title = "Supply"
theme = ExtResource("1_m2frl")
item_count = 4
item_0/text = "Teachers"
item_1/text = "Courses"
item_1/id = 1
item_2/text = "Rooms"
item_2/id = 2
item_3/text = "Timeslots"
item_3/id = 3

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_unselected_color = Color(1, 1, 1, 1)
theme_override_colors/font_hovered_color = Color(0.349476, 0.550231, 1, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/icon_separation = 0
theme_override_styles/tab_focus = ExtResource("3_vpjxf")
theme_override_styles/tabbar_background = ExtResource("4_jlrel")
theme_override_styles/tab_selected = ExtResource("3_vpjxf")
theme_override_styles/tab_hovered = ExtResource("3_vpjxf")
theme_override_styles/tab_unselected = ExtResource("3_vpjxf")
current_tab = 3
clip_tabs = false

[node name="Home" type="ColorRect" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Home"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Home/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_67y6w")

[node name="ColorRect" type="ColorRect" parent="TabContainer/Home/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.881937, 0.881937, 0.881937, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Home/VBoxContainer/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="HomeContent" type="Panel" parent="TabContainer/Home/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="File" type="ColorRect" parent="TabContainer"]
visible = false
layout_mode = 2
color = Color(0.90327, 0.935962, 1, 1)
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/File"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1

[node name="HSeparator" type="HSeparator" parent="TabContainer/File/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_67y6w")

[node name="ColorRect" type="ColorRect" parent="TabContainer/File/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.881937, 0.881937, 0.881937, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/File/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Button" type="Button" parent="TabContainer/File/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Open Cycle"
flat = true

[node name="Button2" type="Button" parent="TabContainer/File/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "New Cycle"
flat = true

[node name="Button3" type="Button" parent="TabContainer/File/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Save Cycle"
flat = true

[node name="Button4" type="Button" parent="TabContainer/File/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Save Cycle as..."
flat = true

[node name="Button5" type="Button" parent="TabContainer/File/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Load Survey"
flat = true

[node name="Button6" type="Button" parent="TabContainer/File/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Quit"
flat = true

[node name="FileContent" type="Panel" parent="TabContainer/File/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="TabContainer/File/VBoxContainer/FileContent"]
title = "Open a File"
size = Vector2i(408, 227)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="Demand" type="ColorRect" parent="TabContainer"]
visible = false
layout_mode = 2
color = Color(0.90327, 0.935962, 1, 1)
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Demand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Demand/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_67y6w")

[node name="ColorRect" type="ColorRect" parent="TabContainer/Demand/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.662745, 0.839216, 0.976471, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Demand/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="SurveyBtn" type="Button" parent="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Survey"
flat = true

[node name="StudentsBtn" type="Button" parent="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Students"
flat = true

[node name="ByStudentBtn" type="Button" parent="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "By Student"
flat = true

[node name="ByCourseBtn" type="Button" parent="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "By Course"
flat = true

[node name="ByLevelBtn" type="Button" parent="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "By Level"
flat = true

[node name="DemandContent" type="Panel" parent="TabContainer/Demand/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Assign" type="ColorRect" parent="TabContainer"]
layout_mode = 2
color = Color(0.916879, 1, 0.90774, 1)
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Assign"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Assign/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_67y6w")

[node name="ColorRect" type="ColorRect" parent="TabContainer/Assign/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.980392, 0.898039, 0.827451, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Assign/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="TeacherPreferencesBtn" type="Button" parent="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Teacher Preferences"
flat = true

[node name="StudentPreferencesBtn" type="Button" parent="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Student Preferences"
flat = true

[node name="AnalyzeBtn" type="Button" parent="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Analyze"
flat = true

[node name="AssignBtn" type="Button" parent="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Assign"
flat = true

[node name="ReportsBtn" type="Button" parent="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Reports"
flat = true

[node name="AssignContent" type="Panel" parent="TabContainer/Assign/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Supply" type="ColorRect" parent="TabContainer"]
visible = false
layout_mode = 2
color = Color(1, 0.876253, 0.855209, 1)
metadata/_tab_index = 4

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Supply"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Supply/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_67y6w")

[node name="ColorRect" type="ColorRect" parent="TabContainer/Supply/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.835294, 0.960784, 0.890196, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Supply/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="AddBtn" type="Button" parent="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/focus = ExtResource("5_7334v")
theme_override_styles/hover = ExtResource("5_7334v")
theme_override_styles/normal = ExtResource("5_7334v")
text = "Add New +"
flat = true

[node name="TeachersBtn" type="Button" parent="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Teachers"
flat = true

[node name="CoursesBtn" type="Button" parent="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Courses"
flat = true

[node name="RoomsBtn" type="Button" parent="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Rooms"
flat = true

[node name="TimeslotsBtn" type="Button" parent="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Timeslots"
flat = true

[node name="PlaceHolder" type="Control" parent="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="SupplyContent" type="Panel" parent="TabContainer/Supply/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1600, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1670.0
offset_top = 4.0
offset_bottom = 76.0
grow_horizontal = 0
theme_override_constants/separation = 30

[node name="IntensiveCheckBox" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
button_pressed = true
text = "INTENSIVE"

[node name="GeneralCheckBox" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
button_pressed = true
text = "GENERAL
"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 2

[node name="Mon1" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "M1
"

[node name="Mon2" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "M2
"

[node name="Mon3" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "M3"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 2

[node name="Wed1" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "W1"

[node name="Wed2" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "W2"

[node name="Wed3" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "W3
"

[node name="Wed4" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
layout_mode = 2
text = "W4
"

[node name="Wed5" parent="HBoxContainer" instance=ExtResource("6_muxi1")]
unique_name_in_owner = true
layout_mode = 2
text = "W5
"

[node name="Popup" parent="." instance=ExtResource("5_osk20")]
unique_name_in_owner = true
visible = false

[connection signal="id_pressed" from="MenuBar/Supply" to="." method="_on_supply_id_pressed"]
[connection signal="pressed" from="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer/SurveyBtn" to="." method="_on_demand_id_pressed" binds= [0]]
[connection signal="pressed" from="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer/StudentsBtn" to="." method="_on_demand_id_pressed" binds= [1]]
[connection signal="pressed" from="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer/ByStudentBtn" to="." method="_on_demand_id_pressed" binds= [2]]
[connection signal="pressed" from="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer/ByCourseBtn" to="." method="_on_demand_id_pressed" binds= [5]]
[connection signal="pressed" from="TabContainer/Demand/VBoxContainer/ColorRect/HBoxContainer/ByLevelBtn" to="." method="_on_demand_id_pressed" binds= [4]]
[connection signal="pressed" from="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer/TeacherPreferencesBtn" to="." method="_on_assign_id_pressed" binds= [0]]
[connection signal="pressed" from="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer/StudentPreferencesBtn" to="." method="_on_assign_id_pressed" binds= [1]]
[connection signal="pressed" from="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer/AnalyzeBtn" to="." method="_on_assign_id_pressed" binds= [2]]
[connection signal="pressed" from="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer/AssignBtn" to="." method="_on_assign_id_pressed" binds= [3]]
[connection signal="pressed" from="TabContainer/Assign/VBoxContainer/ColorRect/HBoxContainer/ReportsBtn" to="." method="_on_assign_id_pressed" binds= [4]]
[connection signal="pressed" from="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer/AddBtn" to="." method="_on_add_btn_pressed"]
[connection signal="pressed" from="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer/TeachersBtn" to="." method="_on_supply_id_pressed" binds= [0]]
[connection signal="pressed" from="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer/CoursesBtn" to="." method="_on_supply_id_pressed" binds= [1]]
[connection signal="pressed" from="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer/RoomsBtn" to="." method="_on_supply_id_pressed" binds= [2]]
[connection signal="pressed" from="TabContainer/Supply/VBoxContainer/ColorRect/HBoxContainer/TimeslotsBtn" to="." method="_on_supply_id_pressed" binds= [3]]
[connection signal="pressed" from="HBoxContainer/IntensiveCheckBox" to="." method="_on_intensive_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/GeneralCheckBox" to="." method="_on_general_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Mon1" to="." method="_on_general_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Mon2" to="." method="_on_general_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Mon3" to="." method="_on_general_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Wed1" to="." method="_on_general_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Wed2" to="." method="_on_general_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Wed3" to="." method="_on_general_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Wed4" to="." method="_on_general_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Wed5" to="." method="_on_general_check_box_pressed"]
